# cupertino-terminal

./: .gitattributes  .gitignore  AGENTS.md  BRAND.md  CHANGELOG.md  INSTALL.md  MACOS-BUGS.md  MIGRATION-PLAN.md  MIGRATION-VTO.md  README.md  README.tr.md  install.ps1  install.sh  launch.js  package-lock.json  package.json  vite.config.mjs
.github/workflows/: build.yml
scripts/: benchmark-pty.js  benchmark-tauri.js  clean.js  set-as-default-terminal.sh  smoke-native.js  smoke-tauri.js
spikes/zerolink-rs/: Cargo.toml  gen-vectors.mjs  vectors.json
spikes/zerolink-rs/src/: lib.rs
spikes/zerolink-rs/tests/: webrtc_non_trickle.rs
src/: app-entry.js  command-history.mjs  command-palette.mjs  index.html  keymap.mjs  main.js  natureco-account.js  path-utils.js  preload.js  renderer.js  session-state.mjs  shell-state.mjs  styles.css  term-api-tauri.js  zerolink-cli.js  zerolink-client.js  zerolink-crypto.js  zerolink-host.js  zerolink-peer.js  zerolink-proto.js  zerolink-transfer.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: account.rs  lib.rs  main.rs  pty.rs
src-tauri/src/zerolink/: crypto.rs  mod.rs  peer.rs  proto.rs  tests.rs  transfer.rs  vectors.json
src/shell-integration/: .zlogin  .zprofile  .zshrc  bash.bash  powershell.ps1
src/types/: index.d.ts
test/: command-history.test.js  command-palette.test.js  path-utils.test.js  session-state.test.js  shell-integration.test.js  shell-state.test.js  zerolink-security.test.js
