[package]
name = "cupertino-terminal"
version = "0.5.0"
description = "Cupertino Terminal Tauri shell"
authors = ["NatureCo"]
edition = "2021"

[lib]
name = "cupertino_terminal_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
