[package]
name = "cupertino-terminal"
version = "0.5.0"
description = "Cupertino Terminal Tauri shell"
authors = ["NatureCo"]
edition = "2021"

[lib]
name = "cupertino_terminal_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = "0.11"
anyhow = "1"
base64 = "0.22"
bytes = "1"
hex = "0.4"
hkdf = "0.13"
hmac = "0.13"
local-ip-address = "0.6"
p256 = { version = "0.14", features = ["ecdh"] }
percent-encoding = "2"
portable-pty = "0.9.0"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
subtle = "2.6"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tempfile = "3"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
url = "2"
webrtc = "0.14"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
