[package]
name = "zerolink-rs-spike"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
aes-gcm = "=0.11.0"
anyhow = "=1.0.100"
bytes = "=1.11.0"
hex = "=0.4.3"
hkdf = "=0.13.0"
hmac = "=0.13.0"
p256 = { version = "=0.14.0", features = ["ecdh"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
sha2 = "=0.11.0"
subtle = "=2.6.1"
tokio = { version = "=1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
webrtc = "=0.14.0"

